--- a/web-socket/app/index.html
+++ b/web-socket/app/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Sockets</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.8.0/socket.io.min.js" integrity="sha512-2j1eiYSzeFsyYR2U3lD1znxCZwsymcYr5REPVR3ijiFexmtaxzjj1/SWxaugYlH78QWZdRMg214NAbGlI8HuTw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script defer src="app.js"></script>
 </head>
 <body>
 
-
+    <h1>Basic Config</h1>
     <form>
         <input type="text" name="Your message" placeholder="Message">
         <button>Send</button>
