--- a/web-socket/server/public/index.html
+++ b/web-socket/server/public/index.html
@@ -26,7 +26,7 @@
 
     <p class="activity"></p>
 
-    <h1>Basic Config</h1>
+    <h1>Sathi banam , Kura Garam</h1>
     <form class="form-msg">
         <input type="text" id="message" name="Your message" placeholder="Message" required>
         <button type="submit">Send</button>
